Bug 1740702 - Add some grid performance logging r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D135610